Ajout d'une scrollbar, gestion du responsive des listes, fixation de la navbar

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,7 @@
 body {
     background-color: #ccc;
     height: 100vh;
+    width: 100vw;
+    max-width: 100%;
+    overflow-x: auto;
 }
